--- a/v1.md
+++ b/v1.md
@@ -2,7 +2,7 @@
 layout: dashboard
 title: "V1"
 nav: "yes"
-sortTitle: "a"
+sortTitle: "aa"
 customjs:
   - /vendor/d3-5.16.0.min.js
   - /vendor/crossfilter-1.5.4.min.js
